tests/baselines/reference/noTypeArgumentOnReturnType1.errors.txt
tests/cases/compiler/noTypeArgumentOnReturnType1.ts(3,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/noTypeArgumentOnReturnType1.ts (1 errors) ====
    class A<T>{
    
     foo(): A{
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
      return null;
     }
    }